# zpebop-qc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
examples/zpebop1_examples/CO2/: bopout.json
examples/zpebop1_examples/LiF/: bopout.json
examples/zpebop1_examples/calicene/: bopout.json
examples/zpebop2_examples/CO2/: bopout.json
examples/zpebop2_examples/LiF/: bopout.json
examples/zpebop2_examples/calicene/: bopout.json
gaussian_output/: molecule.out
tests/: __init__.py  test_zpebop.py
zpebop/: __init__.py  cli.py  constants.py  core.py  parser.py
zpebop/.ipynb_checkpoints/: constants-checkpoint.py
zpebop/models/: __init__.py  base.py  zpebop1.py  zpebop2.py
zpebop1/: cli.py  read_output.py  zpebop1.py  zpebop1_equation.py  zpebop1_params.py
zpebop2/: cli.py  read_output.py  spatial_geom.py  zpebop2.py  zpebop2_equation.py  zpebop2_params.py
zpebop2/opt_parameters/Be~B/: Be~B_param_opt.json
zpebop2/opt_parameters/Be~Be/: Be~Be_param_opt.json
zpebop2/opt_parameters/Be~C/: Be~C_param_opt.json
zpebop2/opt_parameters/Be~F/: Be~F_param_opt.json
zpebop2/opt_parameters/Be~H/: Be~H_param_opt.json
zpebop2/opt_parameters/Be~Li/: Be~Li_param_opt.json
zpebop2/opt_parameters/Be~N/: Be~N_param_opt.json
zpebop2/opt_parameters/Be~O/: Be~O_param_opt.json
zpebop2/opt_parameters/B~B/: B~B_param_opt.json
zpebop2/opt_parameters/B~C/: B~C_param_opt.json
zpebop2/opt_parameters/B~F/: B~F_param_opt.json
zpebop2/opt_parameters/B~H/: B~H_param_opt.json
zpebop2/opt_parameters/B~Li/: B~Li_param_opt.json
zpebop2/opt_parameters/B~N/: B~N_param_opt.json
zpebop2/opt_parameters/B~O/: B~O_param_opt.json
zpebop2/opt_parameters/Cl~Cl/: Cl~Cl_param_opt.json
zpebop2/opt_parameters/Cl~F/: Cl~F_param_opt.json
zpebop2/opt_parameters/C~C/: C~C_param_opt.json
zpebop2/opt_parameters/C~F/: C~F_param_opt.json
zpebop2/opt_parameters/C~H/: C~H_param_opt.json
zpebop2/opt_parameters/C~Li/: C~Li_param_opt.json
zpebop2/opt_parameters/C~N/: C~N_param_opt.json
zpebop2/opt_parameters/C~O/: C~O_param_opt.json
zpebop2/opt_parameters/F~F/: F~F_param_opt.json
zpebop2/opt_parameters/H~Cl/: H~Cl_param_opt.json
zpebop2/opt_parameters/H~F/: H~F_param_opt.json
zpebop2/opt_parameters/H~H/: H~H_param_opt.json
zpebop2/opt_parameters/Li~Cl/: Li~Cl_param_opt.json
zpebop2/opt_parameters/Li~F/: Li~F_param_opt.json
zpebop2/opt_parameters/Li~H/: Li~H_param_opt.json
zpebop2/opt_parameters/Li~Li/: Li~Li_param_opt.json
zpebop2/opt_parameters/Li~Na/: Li~Na_param_opt.json
zpebop2/opt_parameters/Na~Cl/: Na~Cl_param_opt.json
zpebop2/opt_parameters/Na~F/: Na~F_param_opt.json
zpebop2/opt_parameters/Na~H/: Na~H_param_opt.json
zpebop2/opt_parameters/Na~Na/: Na~Na_param_opt.json
(+9 files in other folders)
