[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpebop"
version = "1.0.0"
description = "Zero-Point Energies from Bond Orders and Populations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Barbaro Zulueta", email = "blz11@pitt.edu"}
]
maintainers = [
    {name = "Barbaro Zulueta", email = "blz11@pitt.edu"}
]
keywords = [
    "computational chemistry",
    "quantum chemistry",
    "zero-point energy",
    "vibrational energy",
    "thermochemistry",
    "bond order",
    "Mulliken analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "mypy",
    "sphinx",
]

[project.urls]
Homepage = "https://github.com/keithgroup/zpebop-qc"
Documentation = "https://github.com/keithgroup/zpebop-qc#readme"
Repository = "https://github.com/keithgroup/zpebop-qc"
Issues = "https://github.com/keithgroup/zpebop-qc/issues"

[project.scripts]
zpebop = "zpebop.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zpebop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
